Fork JTS DD, passing basic rounding tests.