@@ -24,7 +24,7 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit-jupiter-version}</version>
-<!--      <scope>test</scope>-->
+      <!--      <scope>test</scope>-->
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -389,15 +389,6 @@
           <testNamespaces>
             <namespace>!mop.test.defs.*</namespace>
           </testNamespaces>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
-        <configuration>
-          <source>${java-version}</source>
-          <target>${java-version}</target>
-     <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
